# AdventOfCode2025

./: .gitignore  aoc25.cabal
app/: Main.hs
app/Aoc/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  DayN.hs  Days.hs
